--- a/Lab-8_202001133.md
+++ b/Lab-8_202001133.md
@@ -31,6 +31,63 @@
 
 ### 5. Implemented test cases for both isHealthy() and Fitsincage() method.
 
+![image](https://user-images.githubusercontent.com/75557009/233294298-bf2f7ca6-1bcc-42b1-9f3c-7c4796c31b6d.png)
+
+**Code for BoaTest**
+
+  package mypackagelab8;
+
+  import static org.junit.Assert.*;
+
+  import org.junit.Before;
+  import org.junit.Test;
+
+  public class BoaTest {
+
+    Boa jen,ken;
+    @Before
+    public void setUp() throws Exception 
+    {
+      jen = new Boa("Jennifer", 2, "grapes");
+      ken = new Boa ("Kenneth", 3, "granola bars");
+    }
+
+    @Test
+    public void testIsHealthy() {
+      assertFalse(jen.isHealthy());
+      assertTrue(ken.isHealthy());
+    }
+
+    @Test
+    public void testFitsInCage() 
+    {
+      //For Jen Object
+      assertTrue(jen.fitsInCage(3));  //cage length is greater
+      assertFalse(jen.fitsInCage(2)); // Cage length is same
+      assertFalse(jen.fitsInCage(1));  //cage length is less
+
+      //For ken Object
+      assertTrue(ken.fitsInCage(4));  //cage length is greater
+      assertFalse(ken.fitsInCage(3)); // Cage length is same
+      assertFalse(ken.fitsInCage(2));  //cage length is less
+
+    }
+
+   }
+
+### 6. Then,I ran the test-case on Eclipse IDE and get green bar on JUnit Pnae.
+
+![image](https://user-images.githubusercontent.com/75557009/233294422-dea52b04-5dd1-4d51-9374-4d1c7f5b3919.png)
+
+### 7. Create a New method LengthInInches() which will convert length from feet to inches.
+
+![image](https://user-images.githubusercontent.com/75557009/233295284-f5a1f79e-bae7-4d12-8a8a-d5b66040544e.png)
+
+### 8. Wrote the new test-case for new LengthInInches() method and tested it.
+
+![image](https://user-images.githubusercontent.com/75557009/233296140-99e2209f-f61d-4cf7-8fc7-f79cf6f8a911.png)
+
+
 
 
 
