Final commit for Lab-8

--- a/Lab-8_202001133.md
+++ b/Lab-8_202001133.md
@@ -75,7 +75,7 @@
 
    }
 
-### 6. Then,I ran the test-case on Eclipse IDE and get green bar on JUnit Pnae.
+### 6. Then,I ran the test-case on Eclipse IDE and get green bar on JUnit Pane.
 
 ![image](https://user-images.githubusercontent.com/75557009/233294422-dea52b04-5dd1-4d51-9374-4d1c7f5b3919.png)
 
